# nori

./: .clippy.toml  .gitignore  .rustfmt.toml  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  tsconfig.base.json
.github/workflows/: ci.yml  publish-github-packages.yml
bench/: README.md
bench/scripts/: measure-compile.mjs
crates/nori/: Cargo.toml
crates/nori-allocator/: Cargo.toml
crates/nori-allocator/src/: lib.rs
crates/nori-analyzer/: Cargo.toml
crates/nori-analyzer/src/: lib.rs
crates/nori-ast/: Cargo.toml
crates/nori-ast/src/: lib.rs
crates/nori-bundler/: Cargo.toml  README.md
crates/nori-bundler/src/: lib.rs
crates/nori-checker/: Cargo.toml
crates/nori-checker/libs/: lib.es5.min.d.ts
crates/nori-checker/src/: lib.rs
crates/nori-codegen/: Cargo.toml
crates/nori-codegen/src/: lib.rs
crates/nori-diagnostic/: Cargo.toml
crates/nori-diagnostic/src/: lib.rs
crates/nori-lexer/: Cargo.toml
crates/nori-lexer/src/: lib.rs
crates/nori-parser/: Cargo.toml
crates/nori-parser/src/: cursor.rs  lib.rs  syntax.rs
crates/nori-semantic/: Cargo.toml
crates/nori-semantic/src/: lib.rs
crates/nori-span/: Cargo.toml
crates/nori-span/src/: lib.rs
crates/nori-wasm/: Cargo.toml
crates/nori-wasm/src/: lib.rs
crates/nori/benches/: compile_todo.rs
crates/nori/src/: lib.rs  main.rs
crates/nori/tests/: compiler_tests.rs
crates/nori/tests/fixtures/: ShadcnCard.nori  Todo.nori
crates/nori/tests/fixtures/typescript/: enum_basic.expected.js  enum_basic.nori  strip_types.expected.js  strip_types.nori
crates/nori/tests/fixtures/typescript/corpus/: advanced_types.expected.js  advanced_types.ts  enums.expected.js  enums.ts  functions.expected.js  functions.ts  simple.ts
crates/nori/tests/fixtures/unsupported/: Decorator.nori  Yield.nori
docs/: README.md  cli.md  compiler-pipeline.md  development.md  examples.md  framework-api.md  getting-started.md  language-subset.md  runtime.md  vscode-extension.md
examples/: Counter.nori  DerivedEffect.nori  Todo.nori
examples/app/: README.md  index.html  package.json  vite.config.js
examples/app-ts/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
examples/app-ts/src/: main.ts  nori-shims.ts  styles.css  vite-env.d.ts
examples/app-ts/src/routes/: index.nori
examples/app/src/: main.js  styles.css
examples/app/src/routes/: index.nori
examples/framework-host/: README.md  rsbuild.config.mjs
examples/framework-host/src/: main.js
examples/framework-remote/: README.md  rsbuild.config.mjs
examples/framework-remote/src/: App.nori  expose.js
extensions/nori/: .vscodeignore  README.md  extension.js  language-configuration.json  package.json
extensions/nori/syntaxes/: nori.tmLanguage.json
src/: analyzer.rs  ast.rs  codegen.rs  diagnostic.rs  lexer.rs  lib.rs  main.rs  parser.rs
src/parser/: cursor.rs
tests/: compiler_tests.rs
