[package]
name = "nori"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
miette = { version = "7.4", features = ["fancy"] }
thiserror = "2.0"
notify = "8"
serde_json = "1.0"
nori-ast = { path = "../nori-ast" }
nori-lexer = { path = "../nori-lexer" }
nori-parser = { path = "../nori-parser" }
nori-analyzer = { path = "../nori-analyzer" }
nori-codegen = { path = "../nori-codegen" }
nori-diagnostic = { path = "../nori-diagnostic" }

[dev-dependencies]
similar = "3.1"